# RingFra

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  tutorial.md
PR_review_templates/: README.md  auto-review.yml  combined.yml  interactive.yml  llm-judge.yml
docs/: REFERENCE.md  TUTORIAL.md
scripts/: clone_target_repo.sh  setup.sh  test_call.py
src/: __init__.py  config.py  main.py  notifications.py
src/agent/: __init__.py  sdk_client.py
src/callbacks/: __init__.py  outbound.py  router.py
src/db/: __init__.py  background_tasks.py  connection.py  encryption.py  memory.py  tasks.py  users.py  zep_memory.py
src/github/: __init__.py  actions.py  workflow_template.py
src/repos/: __init__.py  manager.py
src/tasks/: __init__.py  monitors.py  queue.py  schemas.py  worker.py
src/tools/: __init__.py  base.py  code_tools.py  proactive_tools.py  render_tools.py  utility_tools.py
src/utils/: __init__.py  errors.py  logging.py
src/voice/: __init__.py  handlers.py  pipeline.py  prompts.py  sdk_pipeline.py
src/web/: __init__.py  landing.py  routes.py  templates.py
tests/: __init__.py  conftest.py  test_call_simulation.py  test_callback_flow.py  test_github_actions.py  test_handoff_task.py  test_model_config.py  test_notifications.py  test_pipeline.py  test_proactive.py  test_repo_tools.py  test_repos.py  test_sdk_integration.py  test_ship_intent.py  test_signup.py  test_tools.py
